# aios-quantum

./: .agent_status.json  .env.example  .gitignore  .gitmodules  .pylintrc  ASSESSMENT_2025-12-13.md  INTERFACE.md  README.md  aios-quantum.code-workspace  pyproject.toml  quantum_visualization.html  run_heartbeat.ps1  setup.cfg  test_qbraid_integration.py
.githooks/: pre-commit
.github/workflows/: heartbeat.yml
.quantum_tasks/: bkg_instructions.md  bkg_manifest.json  pending.json
IBM_COMPOSER/: composer-AIOS.qasm
arithmetic_results/: counting_2025-12-12_211759.json  counting_2025-12-12_211826.json  counting_2025-12-12_212239.json
boot/: bootloader.py
cardiogram_results/: cardiogram_real_2025-12-12_204822.json  cardiogram_real_2025-12-12_205642.json  cardiogram_real_2025-12-12_205736.json  hypersphere_surface_2025-12-12_205830.json  hypersphere_surface_2025-12-13_102334.json  surface_real_2025-12-12_204822.json  surface_real_2025-12-12_205642.json  surface_real_2025-12-12_205736.json  unified_surface_20251213.json
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: AINLP_EMERGENT_PATTERNS.md  AIOS_QUANTUM_UNIFIED.md  DEV_PATH.md  HYPERSPHERE_DATA_ANALYSIS.md  HYPERSPHERE_THEORY.md  IBM_CLOUD_CONFIG.md  IBM_CLOUD_INTEGRATION.md  IBM_CLOUD_SETUP_CHECKLIST.md  IBM_CLOUD_SETUP_GUIDE.md  IBM_CLOUD_TOPOLOGY_STORAGE.md  MULTI_AGENT_ARCHITECTURE.md  PUBLIC_ACCESS.md  QUANTUM_INJECTION_BLUEPRINT.md  README.md  SECRETS_PROTECTION.md  aios.md  backends.md  external.md
docs/IBM_Quantum/: BACKEND_SPECIFICATIONS.md  INTERFACE_ARCHITECTURE.md  PRIMITIVES_AND_COMMANDS.md  README.md  RUNTIME_BUDGET.md
docs/Tachyonic/: ASSEMBLY_CORE.md  COSMOLOGY.md  HYPOTHESIS.md  QUANTUM_BRIDGE.md  README.md  VISUALIZATION.md
docs/archive/: CLOUD_ARCHITECTURE.md  QUANTUM_INJECTION_BLUEPRINT.md
docs/screenshots/: README.md
examples/: about_aios.py  backfill_cloud_data.py  first_cloud_experiment.py  hello_world.py  local_simulation.py  run_heartbeat.py  test_cloud_upload.py  test_ibm_quantum_bridge.py
examples/results/exotic/: arithmetic_20251213_103134.json  bell_20251213_103134.json  entanglement_20251213_103134.json  ghz_20251213_103134.json  golden_ratio_20251213_103134.json  pi_search_20251213_103134.json  random_20251213_103134.json
heartbeat_results/: beat_000000_2025-12-10.json  beat_000000_2025-12-11.json  beat_000000_2025-12-12.json  beat_000000_2025-12-13.json  beat_000000_2026-02-07.json  beat_000001_2025-12-10.json  beat_000002_2025-12-10.json  beat_20260207_112659.json  beat_ionq_20260207_140701.json  beat_qbraid_20260207_141811.json  beat_rigetti_ankaa3_20260207_181836.json  real_beat_001_2025-12-12_002752.json
heartbeat_results/jobs/: job-d4tl6sleastc73cg9b7g-info.json  job-d4tl6sleastc73cg9b7g-result.json
logging/: structured.py
quantum_jobs/: pending_jobs.json
quantum_jobs/results/: ibm_fez_20251213_163248_d4uodqleastc.json  ibm_torino_20251213_163247_d4uodq7g0u6s.json  pi_pulse_ibm_fez_20251213_181154.json  pi_pulse_ibm_torino_20251213_181125.json
quantum_logging/: __init__.py
scripts/: build_surface.py  build_unified_surface.py  cardiogram_real.py  quantum_counting.py  real_heartbeat.py  run_cardiogram.py
src/aios_quantum/: __init__.py  about.py  config.py  providers.py  runtime.py
src/aios_quantum/circuits/: __init__.py  arithmetic.py  cardiogram.py  consciousness_circuits.py  exotic_experiments.py  hello_world.py
src/aios_quantum/cloud/: __init__.py  storage.py  uploader.py
src/aios_quantum/communication/: __init__.py
src/aios_quantum/engine/: __init__.py  core.py  encoder.py  experiment_registry.py  experiment_taxonomy.py  geometry.py  layered_encoder.py  patterns.py  renderer.py
src/aios_quantum/entropy/: __init__.py  quantum_entropy_extractor.py
tests/: __init__.py  test_about.py  test_circuits.py  test_consciousness_circuits.py  test_heartbeat.py  test_supercell.py
tools/: gif_extractor.py
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json
web/public/: quantum_experiments.json
web/src/app/: globals.css  (+2 more)
(+37 files in other folders)
